--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -41,7 +41,7 @@ stages:
               - pwsh: |
                   mv ./Directory.build.props ./Directory.Build.props
                   dotnet publish ./src/${{ project }}/${{ project }}.csproj -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true /p:EnableCompressionInSingleFile=true /p:DebugType=None /p:DebugSymbols=false /p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true -p:PublishReadyToRun=true
-                displayName: 'Publish ${{ project }} for ${{ target }}'
+                displayName: Publish
 
           - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
             artifact: drop-$(target)
@@ -54,7 +54,7 @@ stages:
           - ${{ each project in parameters.projects }}:
               - pwsh: |
                   Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
-                displayName: 'Move executables to raw for ${{ target }}'
+                displayName: Copy executables
 
           - pwsh: |
               $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
@@ -67,7 +67,7 @@ stages:
               $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | Where-Object { $_ } | ForEach-Object { [Convert]::ToByte($_, 16) }
               $hashstring = [Convert]::ToBase64String($hashbytes)
               Set-Content -Path $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash -Value $hashstring
-            displayName: 'Package executables for ${{ target }}'
+            displayName: Package executables
 
           - publish: $(Build.ArtifactStagingDirectory)/package-$(target)
             artifact: package-$(target)
