--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -57,10 +57,13 @@ stages:
         signCertPassword: '$(Code_Signing_Password)'
         filePaths: |
           $(Build.ArtifactStagingDirectory)/**/*fiskaltrust*
-          ./src/**/fiskaltrust.Launcher.dll
           ./src/**/*fiskaltrust*.exe
+          ./src/**/*fiskaltrust*.dll
+          ./src/**/fiskaltrust.Launcher.dll
           ./src/**/fiskaltrust.Launcher
+          ./src/**/fiskaltrust.Launcher.exe
           ./src/**/fiskaltrust.LauncherUpdater
+          ./src/**/fiskaltrust.LauncherUpdater.exe
           
     - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
       artifact: drop-$(target)
