--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -37,7 +37,8 @@ stages:
               - pwsh: |
                   mv ./Directory.build.props ./Directory.Build.props
                   dotnet publish ./src/${{ project }}/${{ project }}.csproj -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true /p:EnableCompressionInSingleFile=true /p:DebugType=None /p:DebugSymbols=false /p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true -p:PublishReadyToRun=true
-                displayName: "[${{ project }}] Publish"
+                displayName: "Publish ${{ project }}"
+
           - task: codesigning@2
             displayName: 'Code Signing'
             inputs:
@@ -52,28 +53,33 @@ stages:
                 ./src/**/fiskaltrust.Launcher.exe
                 ./src/**/fiskaltrust.LauncherUpdater
                 ./src/**/fiskaltrust.LauncherUpdater.exe
+
           - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
             artifact: drop-$(target)
+
           - pwsh: |
               New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/
               New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/package-$(target)/
-            displayName: Create Directories
+            displayName: 'Create Directories'
+
           - ${{ each project in parameters.projects }}:
               - pwsh: |
                   Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
-                displayName: "[${{ project }}] Copy executables"
+                displayName: "Move executables for ${{ project }}"
+
           - pwsh: |
               $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
               if("$(vmImage)" -eq "windows-latest") {
                 Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip
               } else {
-                bash -c "cd $(Build.ArtifactStagingDirectory)/raw-$(target)/ && zip -r $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip ."
+                bash -c "cd $(Build.ArtifactStagingDirectory)/raw-$(target)/ && zip -r $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip ./"
               }
               $hash = Get-FileHash $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip -Algorithm SHA256
-              $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | Where-Object { $_ } | ForEach-Object { [Convert]::ToByte($_, 16) }
-              $hashstring = [Convert]::ToBase64String($hashbytes)
+              $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | Where-Object { $_ } | ForEach-Object { [System.Convert]::ToByte($_, 16) }
+              $hashstring = [System.Convert]::ToBase64String($hashbytes)
               Set-Content -Path $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash -Value $hashstring
-            displayName: Package executables
+            displayName: 'Package executables'
+
           - publish: $(Build.ArtifactStagingDirectory)/package-$(target)
             artifact: package-$(target)
 
@@ -84,23 +90,25 @@ stages:
           vmImage: ubuntu-latest
         steps:
           - checkout: self
-          - bash: |
-              echo "Creating directories for scripts..."
-              mkdir -p $(Build.ArtifactStagingDirectory)/scripts-linux
-              echo "Copying scripts to artifacts directory..."
-              cp ./scripts/linux/* $(Build.ArtifactStagingDirectory)/scripts-linux/
-            displayName: 'Prepare Linux Script Artifacts'
-          - task: ArchiveFiles@2
-            inputs:
-              rootFolderOrFile: "$(Build.ArtifactStagingDirectory)/scripts-linux"
-              includeRootFolder: false
-              archiveType: 'zip'
-              archiveFile: "$(Build.ArtifactStagingDirectory)/scripts-linux.zip"
-              replaceExistingArchive: true
-            displayName: 'Archive Linux Scripts'
-          - publish: $(Build.ArtifactStagingDirectory)/scripts-linux.zip
-            artifact: scripts-linux
-            displayName: 'Publish Linux Scripts'
+      - bash: |
+          version=$(xmllint --xpath 'string(//Project/PropertyGroup/Version)' ./Directory.Build.props)
+          echo "Creating directories for scripts..."
+          mkdir -p $(Build.ArtifactStagingDirectory)/scripts-linux
+          echo "Copying scripts to artifacts directory..."
+          cp ./scripts/linux/* $(Build.ArtifactStagingDirectory)/scripts-linux/
+        displayName: 'Prepare Linux Script Artifacts'
+      - task: ArchiveFiles@2
+        inputs:
+          rootFolderOrFile: "$(Build.ArtifactStagingDirectory)/scripts-linux"
+          includeRootFolder: false
+          archiveType: 'zip'
+          archiveFile: "$(Build.ArtifactStagingDirectory)/scripts-linux-$version.zip"
+          replaceExistingArchive: true
+        displayName: 'Archive Linux Scripts'
+      - publish: $(Build.ArtifactStagingDirectory)/scripts-linux-$version.zip
+        artifact: scripts-linux
+        displayName: 'Publish Linux Scripts'
+            
       - job: PublishWindowsScripts
         dependsOn: Build
         condition: succeeded()
@@ -108,20 +116,21 @@ stages:
           vmImage: windows-latest
         steps:
           - checkout: self
-          - pwsh: |
-              echo "Creating directory for Windows scripts..."
-              mkdir -p $(Build.ArtifactStagingDirectory)/scripts-windows
-              echo "Copying Windows scripts to artifacts directory..."
-              cp ./scripts/windows/* $(Build.ArtifactStagingDirectory)/scripts-windows/
-            displayName: 'Prepare Windows Script Artifacts'
-          - task: ArchiveFiles@2
-            inputs:
-              rootFolderOrFile: "$(Build.ArtifactStagingDirectory)/scripts-windows"
-              includeRootFolder: false
-              archiveType: 'zip'
-              archiveFile: "$(Build.ArtifactStagingDirectory)/scripts-windows.zip"
-              replaceExistingArchive: true
-            displayName: 'Archive Windows Scripts'
-          - publish: $(Build.ArtifactStagingDirectory)/scripts-windows.zip
-            artifact: scripts-windows
-            displayName: 'Publish Windows Scripts'
+      - pwsh: |
+          $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
+          echo "Creating directory for Windows scripts..."
+          mkdir -p $(Build.ArtifactStagingDirectory)/scripts-windows
+          echo "Copying Windows scripts to artifacts directory..."
+          cp ./scripts/windows/* $(Build.ArtifactStagingDirectory)/scripts-windows/
+        displayName: 'Prepare Windows Script Artifacts'
+      - task: ArchiveFiles@2
+        inputs:
+          rootFolderOrFile: "$(Build.ArtifactStagingDirectory)/scripts-windows"
+          includeRootFolder: false
+          archiveType: 'zip'
+          archiveFile: "$(Build.ArtifactStagingDirectory)/scripts-windows-$version.zip"
+          replaceExistingArchive: true
+        displayName: 'Archive Windows Scripts'
+      - publish: $(Build.ArtifactStagingDirectory)/scripts-windows-$version.zip
+        artifact: scripts-windows
+        displayName: 'Publish Windows Scripts'
