--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -14,21 +14,27 @@ stages:
             win-x64:
               vmImage: windows-latest
               target: win-x64
+              scriptFolder: 'windows'
             win-x86:
               vmImage: windows-latest
               target: win-x86
+              scriptFolder: 'windows'
             linux-x64:
               vmImage: ubuntu-latest
               target: linux-x64
+              scriptFolder: 'linux'
             linux-arm:
               vmImage: ubuntu-latest
               target: linux-arm
+              scriptFolder: 'linux'
             linux-arm64:
               vmImage: ubuntu-latest
               target: linux-arm64
+              scriptFolder: 'linux'
             osx-x64:
               vmImage: macos-11
               target: osx-x64
+              scriptFolder: 'osx'
         pool:
           vmImage: $(vmImage)
         steps:
@@ -53,32 +59,32 @@ stages:
                 ./src/**/fiskaltrust.Launcher.exe
                 ./src/**/fiskaltrust.LauncherUpdater
                 ./src/**/fiskaltrust.LauncherUpdater.exe
+                displayName: 'Code Signing'
 
           - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
             artifact: drop-$(target)
 
-          - pwsh: |
-              New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/
-              New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/package-$(target)/
-            displayName: 'Create Directories'
-
           - ${{ each project in parameters.projects }}:
               - pwsh: |
+                  New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/ -Force
+                  New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/package-$(target)/ -Force
                   Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
-                displayName: "Move executables for ${{ project }}"
-
-          - pwsh: |
-              $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
-              if("$(vmImage)" -eq "windows-latest") {
-              Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip
-              } else {
-              bash -c "cd $(Build.ArtifactStagingDirectory)/raw-$(target)/`nzip -r $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip ./"
-              }
-              $hash = Get-FileHash $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip -Algorithm SHA256
-              $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | foreach-object { if ($_) {[System.Convert]::ToByte($_,16)}}
-              $hashstring = [System.Convert]::ToBase64String($hashbytes)
-              $hashstring | Set-Content $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash
-            displayName: 'Package executables'
+                  $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
+                  if("$(vmImage)" -eq "windows-latest") {
+                      Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip
+                  } else {
+                      tar -czf $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.tar.gz -C $(Build.ArtifactStagingDirectory)/raw-$(target) .
+                  }
+                  # Hash calculation
+                  if("$(vmImage)" -eq "windows-latest") {
+                      $hash = Get-FileHash $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip -Algorithm SHA256
+                  } else {
+                      $hash = bash -c "sha256sum $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.tar.gz"
+                  }
+                  $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | ForEach-Object { if ($_) { [System.Convert]::ToByte($_, 16) } }
+                  $hashstring = [System.Convert]::ToBase64String($hashbytes)
+                  Set-Content -Path $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash -Value $hashstring
+                displayName: "Package ${{ project }}"
 
           - publish: $(Build.ArtifactStagingDirectory)/package-$(target)
             artifact: package-$(target)
@@ -86,51 +92,36 @@ stages:
       - job: PublishScripts
         dependsOn: Build
         condition: succeeded()
+        strategy:
+          matrix:
+            linux:
+              vmImage: ubuntu-latest
+              scriptFolder: linux
+            windows:
+              vmImage: windows-latest
+              scriptFolder: windows
         pool:
-          vmImage: ubuntu-latest
+          vmImage: $(vmImage)
         steps:
           - checkout: self
-          - bash: |
+          - script: |
               version=$(xmllint --xpath 'string(//Project/PropertyGroup/Version)' ./Directory.Build.props)
-              echo "Creating directories for scripts..."
-              mkdir -p $(Build.ArtifactStagingDirectory)/scripts-linux
-              echo "Copying scripts to artifacts directory..."
-              cp ./scripts/linux/* $(Build.ArtifactStagingDirectory)/scripts-linux/
-            displayName: 'Prepare Linux Script Artifacts'
-          - task: ArchiveFiles@2
-            inputs:
-              rootFolderOrFile: "$(Build.ArtifactStagingDirectory)/scripts-linux"
-              includeRootFolder: false
-              archiveType: 'zip'
-              archiveFile: "$(Build.ArtifactStagingDirectory)/scripts-linux-$version.zip"
-              replaceExistingArchive: true
-            displayName: 'Archive Linux Scripts'
-          - publish: $(Build.ArtifactStagingDirectory)/scripts-linux-$version.zip
-            artifact: scripts-linux
-            displayName: 'Publish Linux Scripts'
+              scriptFolder=$(scriptFolder)
+              mkdir -p $(Build.ArtifactStagingDirectory)/scripts-$(scriptFolder)
+              cp ./scripts/$(scriptFolder)/* $(Build.ArtifactStagingDirectory)/scripts-$(scriptFolder)/
+            displayName: 'Prepare Script Artifacts'
+            env:
+              scriptFolder: $(scriptFolder)
 
-      - job: PublishWindowsScripts
-        dependsOn: Build
-        condition: succeeded()
-        pool:
-          vmImage: windows-latest
-        steps:
-          - checkout: self
-          - pwsh: |
-              $version = (Select-Xml -Path "./Directory.Build.props" -XPath 'Project/PropertyGroup/Version').Node.InnerText
-              echo "Creating directory for Windows scripts..."
-              mkdir -p $(Build.ArtifactStagingDirectory)/scripts-windows
-              echo "Copying Windows scripts to artifacts directory..."
-              cp ./scripts/windows/* $(Build.ArtifactStagingDirectory)/scripts-windows/
-            displayName: 'Prepare Windows Script Artifacts'
           - task: ArchiveFiles@2
             inputs:
-              rootFolderOrFile: "$(Build.ArtifactStagingDirectory)/scripts-windows"
+              rootFolderOrFile: "$(Build.ArtifactStagingDirectory)/scripts-$(scriptFolder)"
               includeRootFolder: false
               archiveType: 'zip'
-              archiveFile: "$(Build.ArtifactStagingDirectory)/scripts-windows-$version.zip"
+              archiveFile: "$(Build.ArtifactStagingDirectory)/scripts-$(scriptFolder)-$version.zip"
               replaceExistingArchive: true
-            displayName: 'Archive Windows Scripts'
-          - publish: $(Build.ArtifactStagingDirectory)/scripts-windows-$version.zip
-            artifact: scripts-windows
-            displayName: 'Publish Windows Scripts'
+            displayName: 'Archive Scripts'
+
+          - publish: $(Build.ArtifactStagingDirectory)/scripts-$(scriptFolder)-$version.zip
+            artifact: scripts-$(scriptFolder)
+            displayName: 'Publish Scripts'
